--- a/templates/onboarding.html
+++ b/templates/onboarding.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Response</title>
+    <title>Archive</title>
 </head>
 <body>
-    <h1>Response Page</h1>
+    <h1>Archive Page</h1>
 </body>
 </html>
