--- a/templates/home.html
+++ b/templates/home.html
@@ -42,6 +42,6 @@
 
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="scripts/home.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
