--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mood Journal</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
 
 </head>
 <body>
@@ -41,6 +42,7 @@
   </section>
 
   <!-- Chart.js -->
-  <script src="script.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
