--- a/templates/journal.html
+++ b/templates/journal.html
@@ -11,6 +11,7 @@
   <section id="journal-page">
     <div class="paper">
       <h2 id="typewriter"></h2>
+      <h2 id="typewriter">{{ journal_text }}</h2>
       <button id="growth-btn">MY GROWTH JOURNEY</button>
     </div>
   </section>
